samples/_failures_safe/1761438438_9027d3_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_0eb943c6.c: In function ‘main’:
./samples/SAFE/__tmp_0eb943c6.c:183: error: expected ‘(’ at end of input
./samples/SAFE/__tmp_0eb943c6.c:182:13: error: expected declaration or statement at end of input
  182 |             if
      |             ^~
./samples/SAFE/__tmp_0eb943c6.c:182:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_0eb943c6.c:182:13: error: expected declaration or statement at end of input
